--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.4.5",
     "mammoth": "^1.7.1",
+    "openai": "^4.33.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pdftotext": "^1.1.1",
