--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_GOOGLE_CLIENT_ID=350552274341-f9up5g3hvo3646ll75ae5a2rh7f7q6jc.apps.googleusercontent.com
 NEXT_PUBLIC_SERVER_ENDPOINT=http://localhost:1337
 NEXT_PUBLIC_GOOGLE_OAUTH_REDIRECT_URL=http://localhost:1337/api/sessions/oauth/google
+OPEN_AI_API_KEY=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
+ASSEMBLY_AI_API_KEY=40b69f6377b5435d8c0599412776ad6f
